implemente add ues and studentClasse in classeModules